// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
Array [
  <path
    className="react-flow__edge-path"
    d="M 0,0L 0,0Q 0,5 5,5L 5,5Q 10,5 10,10L 10,10"
    id="a"
    markerEnd="none"
    style={
      Object {
        "strokeDasharray": "5,5",
      }
    }
  />,
  <foreignObject
    className="edgebutton-foreignobject"
    height={40}
    requiredExtensions="http://www.w3.org/1999/xhtml"
    width={200}
    x={-90}
    y={-65}
  >
    <div
      className="flex justify-center align-center"
      style={
        Object {
          "height": "40px",
        }
      }
    >
      <button
        className="
                bg-graph-accent p-1 rounded z-1 text-xs min-w-sm text-white px-4
                
                "
      />
    </div>
  </foreignObject>,
]
`;

exports[`should render with parent 1`] = `
Array [
  <path
    className="react-flow__edge-path"
    d="M 0,0L 0,0Q 0,5 5,5L 5,5Q 10,5 10,10L 10,10"
    id="a"
    markerEnd="none"
    style={
      Object {
        "strokeDasharray": "5,5",
      }
    }
  />,
  <foreignObject
    className="edgebutton-foreignobject"
    height={40}
    requiredExtensions="http://www.w3.org/1999/xhtml"
    width={200}
    x={-90}
    y={-65}
  >
    <div
      className="flex justify-center align-center"
      style={
        Object {
          "height": "40px",
        }
      }
    >
      <button
        className="
                bg-graph-accent p-1 rounded z-1 text-xs min-w-sm text-white px-4
                cursor-pointer
                "
        onClick={[Function]}
      />
    </div>
  </foreignObject>,
]
`;
